cabal-version: 2.4
name:          haskanoid
version:       0.1.5.4
synopsis:      A breakout game written in Yampa using SDL
description:
  An arkanoid game featuring SDL graphics and sound, and
  Wiimote & Kinect support, implemented using Yampa.
  .
  <<https://github.com/ivanperez-keera/haskanoid/blob/master/screenshots/android.gif?raw=true>>

homepage:      http://github.com/ivanperez-keera/haskanoid
license-file:  LICENSE
author:        Ivan Perez and Henrik Nilsson
maintainer:    ivan.perez@keera.co.uk
category:      Game, Reactivity, FRP
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.2
data-files:
  data/*.png
  data/*.wav
  data/*.mp3
  data/*.ttf

source-repository head
  type:     git
  location: git://github.com/ivanperez-keera/haskanoid.git

flag wiimote
  description: Enable Wiimote support with hcwiid
  default:     True

flag kinect
  description: Enable Kinect support (with freenect)
  default:     True

common common
  build-depends:
    , base    >=4.12 && <4.15
    , IfElse  ^>=0.85
    , Yampa   ^>=0.13

  ghc-options:      -Wall
  default-language: Haskell2010

executable haskanoid
  import:        common
  main-is:       app/Main.hs
  build-depends: haskanoid

  if flag(wiimote)
    cpp-options: -Dwiimote
    ghc-options: -rtsopts

  if flag(kinect)
    cpp-options: -Dkinect

  ghc-options:   -O2

library
  import:          common
  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Audio
    Constants
    Control.Extra.Monad
    Data.Extra.List
    Data.Extra.Num
    Data.Extra.Ord
    Data.Extra.VectorSpace
    Data.IdentityList
    Display
    FRP.Extra.Yampa
    Game
    GameCollisions
    GameState
    Graphics.UI.Extra.FPS
    Graphics.UI.Extra.SDL
    Input
    Levels
    Objects
    ObjectSF
    Paths_haskanoid
    Physics.TwoDimensions.Collisions
    Physics.TwoDimensions.Dimensions
    Physics.TwoDimensions.Physics
    Resources

  build-depends:
    , MissingH             ^>=1.4
    , mtl                  ^>=2.2
    , SDL                  ^>=0.6
    , SDL-image            ^>=0.6
    , SDL-mixer            ^>=0.6
    , SDL-ttf              ^>=0.6
    , simple-affine-space  ^>=0.1
    , transformers         ^>=0.5

  if flag(wiimote)
    build-depends: hcwiid ^>=0.0.6

  if flag(kinect)
    build-depends:
      , freenect  ^>=1.2
      , vector    ^>=0.12
